Fix wrong horizontal scroll on mobile view

--- a/src/components/Layout/Page.module.css
+++ b/src/components/Layout/Page.module.css
@@ -14,7 +14,6 @@
 
 @media screen and (max-width: 640px){
   .pageMain {
-    width: 100vw;
-    padding: 0 40px 0 20px;
+    width: 80vw;
   }
 }
